--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "testing package to validate npm / github release workflow",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"no tests\""
   },
   "repository": {
     "type": "git",
