--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/histos/internal-use-only/issues"
   },
-  "homepage": "https://github.com/histos/internal-use-only#readme"
+  "homepage": "https://github.com/histos/internal-use-only#readme",
+  "devDependencies": {
+    "release-it": "12.4.3"
+  }
 }
